# gnomecast

./: .gitignore  PKGBUILD  README.md  pyproject.toml
gnomecast/: __init__.py  app.py  assets.py  cli.py  devices.py  ffmpeg.py  media.py  screensaver.py  server.py  subtitles.py  transcoder.py
packaging/: PKGBUILD
tests/: conftest.py  test_devices.py  test_ffmpeg.py  test_integration.py  test_media.py  test_server.py  test_subtitles.py  test_transcoder.py
